--- a/tex_template/projectReportTemplate.tex
+++ b/tex_template/projectReportTemplate.tex
@@ -71,7 +71,7 @@
  This line break forced with \textbackslash\textbackslash
 }%
 
-\collaboration{MUSO Collaboration}%\noaffiliation
+\collaboration{MUSO Collaboration}\noaffiliation
 
 \author{Charlie Author}
  \homepage{http://www.Second.institution.edu/~Charlie.Author}
@@ -88,7 +88,7 @@
  This line break forced with \textbackslash\textbackslash
 }%
 
-\collaboration{CLEO Collaboration}%\noaffiliation
+\collaboration{CLEO Collaboration}\noaffiliation
 
 \date{\today}% It is always \today, today,
              %  but any date may be explicitly specified
